--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,7 +15,7 @@ rootLogger.appenderRef.rolling.ref = RollingFile
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} | %-5.5p | %-3.3L - %-25.25C{1} : %msg%n
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} | %-5.5p | %-3.3L - %-25.25c{1} : %msg%n
 
 
 # RollingFileAppender
@@ -24,6 +24,6 @@ appender.rolling.name = RollingFile
 appender.rolling.fileName= target/logs/${sys:logFileName}.log
 appender.rolling.filePattern= target/logs/${sys:logFileName}.log.gz
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} | %-5.5p | %-5.5L | %-25.25{1} | %msg%n
+appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} | %-5.5p | %-5.5L | %-25.25c{1} | %msg%n
 appender.rolling.policies.type = Policies
 
